--- a/templates/towers.html
+++ b/templates/towers.html
@@ -606,17 +606,17 @@ function setMaxBet() {
                         document.querySelectorAll('.payout').forEach(cellEl => {
                             const index = Number(cellEl.dataset.index);
                     
-                            cellEl.classList.remove('.payout.mine', '.payout.reveal');
+                            cellEl.classList.remove('mine', 'reveal');
                     
                             if (mines.includes(index)) {
-                                cellEl.classList.add('payout.mine');
+                                cellEl.classList.add('mine');
                                 cellEl.querySelector('span').textContent = '💣'; 
                             } else {
-                                cellEl.classList.add('payout.reveal');
+                                cellEl.classList.add('reveal');
                     
                                 if (!cellEl.classList.contains('clicked')) {
                                     const total_tiles = 24; 
-                                    const tiles_cleared = document.querySelectorAll('.payout.reveal').length; 
+                                    const tiles_cleared = document.querySelectorAll('reveal').length; 
                                     const multiplier_per_click = total_tiles / (total_tiles - mines.length);
                                     const total_multiplier = Math.pow(multiplier_per_click, tiles_cleared + 1); 
                                     const bet_amount = result.betamount; 
@@ -1008,6 +1008,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
