--- a/templates/towers.html
+++ b/templates/towers.html
@@ -982,7 +982,7 @@ function setMaxBet() {
                             const index = Number(cell.dataset.index);
                 
                             if (revealedIndices.includes(index)) {
-                                cell.classList.add('clicked', 'revealed'); 
+                                cell.classList.add('reveal'); 
                             }
                         });
 
@@ -1008,6 +1008,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
