--- a/templates/mines.html
+++ b/templates/mines.html
@@ -958,10 +958,9 @@ function setMaxBet() {
                     openWallet('withdraw');
                 }
 
-                const cashoutResponse = await fetch('/games/cashoutamount', {
+                const cashoutResponse = await fetch('/games/cashoutamount?Game=Mines', {
                     method: 'GET',
-                    headers: { 'Content-Type': 'application/json' },
-                    credentials: 'include',
+                    credentials: 'include', 
                 });
 
                 if (!cashoutResponse.ok) throw new Error('Failed to fetch cashout info');
@@ -1017,6 +1016,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
