--- a/templates/towers.html
+++ b/templates/towers.html
@@ -563,7 +563,10 @@ function setMaxBet() {
 
             <div class="payout-grid">
                 {% for i in range(24) %}
-                    <div class="payout" data-index="{{ i }}" data-row="{{ i }}">
+                                                    
+                  {% set row = i // 3 %} 
+                    
+                    <div class="payout" data-index="{{ i }}" data-row="{{ row }}">
                         <span>$</span>???
                     </div>
                 {% endfor %}
@@ -1008,6 +1011,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
