Update print statement from 'Hello' to 'Goodbye'

--- a/templates/towers.html
+++ b/templates/towers.html
@@ -564,8 +564,8 @@ function setMaxBet() {
             <div class="payout-grid">
                 {% for i in range(24) %}
                                                     
-                  {% set row = i // 3 %} 
-                    
+                    {% set row = 7 - (i // 3) + 1 %}
+                
                     <div class="payout" data-index="{{ i }}" data-row="{{ row }}">
                         <span>$</span>???
                     </div>
@@ -1011,6 +1011,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
