--- a/templates/towers.html
+++ b/templates/towers.html
@@ -959,7 +959,7 @@ function setMaxBet() {
         
             const data = await reply.json();
         
-            const betAmount = Number(data.amount) || 0;
+            const betAmount = Number(data.betamount) || 0;
             document.getElementById('currentAmount').textContent = currentamount;
         
             document.querySelectorAll('.payout').forEach(cell => {
@@ -975,6 +975,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
